--- a/Ds-algo/pom.xml
+++ b/Ds-algo/pom.xml
@@ -5,7 +5,10 @@
 <groupId>Ds-algo</groupId>
 <artifactId>Ds-algo</artifactId>
 <version>0.0.1-SNAPSHOT</version>
-<properties> </properties>
+<properties> 
+	<maven.compiler.source>1.8</maven.compiler.source> 
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 <dependencies>
 <dependency>
 <groupId>io.github.bonigarcia</groupId>
