--- a/Ds-algo/pom.xml
+++ b/Ds-algo/pom.xml
@@ -76,12 +76,13 @@
 <artifactId>poi-ooxml</artifactId>
 <version>5.2.5</version>
 </dependency>
-<!--  https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin  -->
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 <dependency>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-compiler-plugin</artifactId>
-<version>3.13.0</version>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.13.0</version>
 </dependency>
+
 <!--  https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport  -->
 <dependency>
 <groupId>com.vimalselvam</groupId>
@@ -102,6 +103,11 @@
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-compiler-plugin</artifactId>
 <version>3.13.0</version>
+<configuration>
+	<executable>
+		C:\Program Files\Java\jdk-21\bin\javac
+	</executable>
+	</configuration>
 </plugin>
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
